android key to create apk

--- a/app.json
+++ b/app.json
@@ -19,6 +19,10 @@
 		"assetBundlePatterns": ["**/*"],
 		"ios": {
 			"supportsTablet": true
+		},
+		"android": {
+			"package": "com.juanjozanabria.udacicards",
+			"versionCode": 1
 		}
 	}
 }
